--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEcdnkNovproBEl/X4syBe"
+      "authorship_tag": "ABX9TyPH/mOf/6j+F815/4TlOp7m"
     },
     "kernelspec": {
       "name": "python3",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -151,7 +151,7 @@
         },
         "outputId": "1ab82632-f7ae-48da-bb97-9771f3477164"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
         "id": "2pLqYKfsTaNn",
         "outputId": "3d131afd-abfa-4f90-cbaa-6d8f7132e48a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +398,7 @@
         "id": "hgYmAMVhTjqa",
         "outputId": "4e04e1a8-2409-4131-fc74-6887844d9e2b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +437,7 @@
         "id": "bpm3VK_4lmaT",
         "outputId": "faba7846-cd04-4856-cb98-fb0de20843c5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
         "id": "jlsVVwKM0fId",
         "outputId": "e7cc925b-030f-48b0-c4d8-8f3489037bbe"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +500,7 @@
         "id": "6rr0fFvm0fnx",
         "outputId": "5f1c475e-315b-469f-e53e-2688d3c692d8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
         "id": "WDyb2PtmZQ3d",
         "outputId": "6346aaf5-b256-40e5-f6e4-10c79c31e81a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
       "metadata": {
         "id": "eyBvLfz_5lGp"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
         "id": "IAj01toF5L5_",
         "outputId": "caa3023c-79e8-4afe-e8a3-37b7255b45eb"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +632,7 @@
         "id": "kpGHmhYO6osD",
         "outputId": "465c9264-4b6f-468d-94f2-15d8645dc38c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +682,7 @@
         "id": "ijFChqeSamEn",
         "outputId": "4d71cde3-b31f-4a37-9910-d5a5ba435cf1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -736,7 +736,7 @@
       "metadata": {
         "id": "nhOAOicSr94L"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -759,12 +759,12 @@
       "metadata": {
         "id": "4J9JbUswr9pS"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -787,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -839,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -904,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -941,7 +941,7 @@
       "metadata": {
         "id": "qh-ZafQP96EJ"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -962,7 +962,7 @@
       "metadata": {
         "id": "s_KSpiGd-9uG"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -978,7 +978,7 @@
         "id": "oipg-6_lP_un",
         "outputId": "0c0c732b-80c8-4ba3-e176-bd6010ec4c0e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1022,7 +1022,7 @@
         "id": "5CiNpSCTPvSk",
         "outputId": "78b18731-4ea6-4b72-9985-6675957f8ce3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1069,7 @@
       "metadata": {
         "id": "iVGy4c4QQlFb"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1090,7 +1090,7 @@
         "id": "Xw8WrXq9WpOh",
         "outputId": "60d6a075-b63d-4a96-812b-d87302220df1"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1113,7 @@
         },
         "outputId": "8f56adbd-e6c4-4311-d8b1-1afd07383215"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1133,7 @@
       "metadata": {
         "id": "vnWUdqVliJq2"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1146,7 +1146,7 @@
       "metadata": {
         "id": "48CmCTDKXkoY"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1175,7 +1175,7 @@
       "metadata": {
         "id": "nXNPKPbXjCnb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1197,7 +1197,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1227,7 +1227,7 @@
       "metadata": {
         "id": "7mE0rizv-SEJ"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1309,7 +1309,7 @@
         },
         "outputId": "00204283-c066-4198-c63a-5729383a97d7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,7 +1419,7 @@
       "metadata": {
         "id": "Zy_f-RHGXn_p"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1443,7 +1443,7 @@
         "id": "W_blxD-TFd6C",
         "outputId": "72722a48-68e4-473e-a6e6-9ce1989058d4"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1484,7 +1484,7 @@
         },
         "outputId": "a568d5ed-30a1-497a-fc24-e96c29efd67d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1533,7 @@
       "metadata": {
         "id": "2fmv4r6ReZcS"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1568,7 +1568,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1609,7 +1609,7 @@
       "metadata": {
         "id": "CLdO2ygPhN_N"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1658,16 +1658,16 @@
         "\n",
         "          X.to(device), y.to(device)\n",
         "\n",
-        "          preds = model(X)\n",
+        "          train_preds = model(X)\n",
         "\n",
-        "          loss = loss_fn(preds, y)\n",
-        "          train_loss += loss\n",
-        "          train_acc += accuracy_fn(preds = preds,\n",
+        "          curr_loss = loss_fn(train_preds, y)\n",
+        "          train_loss += curr_loss\n",
+        "          train_acc += accuracy_fn(train_preds = train_preds,\n",
         "                                   target = y)\n",
         "\n",
         "          optimizer.zero_grad()\n",
         "\n",
-        "          loss.backward()\n",
+        "          curr_loss.backward()\n",
         "\n",
         "          optimizer.step()\n",
         "\n",
@@ -1676,12 +1676,12 @@
         "      train_loss /= len(data_loader)\n",
         "      train_acc /= len(data_loader)\n",
         "\n",
-        "      print(f\"Train Loss: {train_loss:5.f} | Test Loss: {test_loss:.2f}%\")"
+        "      print(f\"Train Loss: {train_loss:5.f} | Train accuracy:  {train_acc:.2f}%\")"
       ],
       "metadata": {
         "id": "Phn0FtoV3b1k"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1696,12 +1696,36 @@
         "\n",
         "      test_loss, test_acc = 0, 0\n",
         "      model.to(device)\n",
-        "      model.eval()"
+        "      model.eval()\n",
+        "\n",
+        "      with model.inference_mode():\n",
+        "\n",
+        "          for X, y in data_loader:\n",
+        "\n",
+        "              X.to(device), y.to(device)\n",
+        "\n",
+        "              test_preds = model()\n",
+        "\n",
+        "              test_loss += loss_fn(test_preds, y):\n",
+        "\n",
+        "              test_acc += accuracy_fn(preds = test_preds,\n",
+        "                                      target = y)\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "loGu908zj0wW"
       },
-      "execution_count": 40,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yeQ2uAoa0tNE"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
