--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyWNJg7yRHbIEPx7zHBaEH"
+      "authorship_tag": "ABX9TyN9+/RWSbkjP7cvxZAMzIu6"
     },
     "kernelspec": {
       "name": "python3",
@@ -1030,7 +1030,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 663
+          "height": 752
         },
         "id": "ijFChqeSamEn",
         "outputId": "9db25734-fe41-4570-8707-884e372b542e"
@@ -2135,7 +2135,6 @@
       ],
       "metadata": {
         "id": "yeQ2uAoa0tNE",
-        "outputId": "12f06485-ed80-4121-9a55-ada9754ec0b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 307,
@@ -2152,7 +2151,8 @@
             "5d31571adbee43308466feaced6fe41d",
             "6cf609cd5ef447acaa64429ebc00d89d"
           ]
-        }
+        },
+        "outputId": "12f06485-ed80-4121-9a55-ada9754ec0b8"
       },
       "execution_count": 72,
       "outputs": [
@@ -2193,6 +2193,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- The traininig time depends on the quality of the used hardware.\n",
+        "- There is a time spent in transfering data from CPU to GPU.\n",
+        "- So, GPU works best for large dataset because for smaller dataset this transfering time outwiegh its computing power benefit.\n"
+      ],
+      "metadata": {
+        "id": "OcBrOVfzDqbf"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -2200,6 +2211,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Do not forget to try GPU for its part"
+      ],
+      "metadata": {
+        "id": "AK6lNa9pFFx7"
+      }
     },
     {
       "cell_type": "markdown",
