--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPUYyhUoCh6p+g30rx0Kf8L"
+      "authorship_tag": "ABX9TyNbb5i6cqcmwqwYmkv7pofe"
     },
     "kernelspec": {
       "name": "python3",
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -495,7 +495,7 @@
       "metadata": {
         "id": "08xqQcGwuCug"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +511,7 @@
         "id": "2pLqYKfsTaNn",
         "outputId": "534e6ce8-048d-4263-9a40-4cc8e1ad1f5c"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
         "id": "hgYmAMVhTjqa",
         "outputId": "19135374-75ba-45ea-c6c2-39803c122cf7"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +706,7 @@
         "id": "bpm3VK_4lmaT",
         "outputId": "c8bdf288-28ca-4e22-9598-371bc4b99c3c"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,7 +743,7 @@
         "id": "jlsVVwKM0fId",
         "outputId": "66a2ee51-b393-402e-a246-cdd1cf1cd0e9"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,7 +769,7 @@
         "id": "6rr0fFvm0fnx",
         "outputId": "35712fc3-12e2-4064-e232-2e3a6caad0ce"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +795,7 @@
         "id": "WDyb2PtmZQ3d",
         "outputId": "1f18a7c0-ee55-40c9-c529-030bb3c74f09"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +835,7 @@
       "metadata": {
         "id": "eyBvLfz_5lGp"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -854,7 +854,7 @@
         "id": "IAj01toF5L5_",
         "outputId": "2e734ead-56d9-4935-e450-144194ac2534"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +901,7 @@
         "id": "kpGHmhYO6osD",
         "outputId": "b6e9ea3d-c192-4e4d-e0d6-2451b1c809f9"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +951,7 @@
         "id": "ijFChqeSamEn",
         "outputId": "f2d304d9-39fa-45af-fa9c-8befa8d5d5d0"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1005,7 +1005,7 @@
       "metadata": {
         "id": "nhOAOicSr94L"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1028,12 +1028,12 @@
       "metadata": {
         "id": "4J9JbUswr9pS"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1056,7 +1056,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1081,7 +1081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1108,7 +1108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1173,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1210,7 +1210,7 @@
       "metadata": {
         "id": "qh-ZafQP96EJ"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1231,7 +1231,7 @@
       "metadata": {
         "id": "s_KSpiGd-9uG"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1247,7 +1247,7 @@
         "id": "oipg-6_lP_un",
         "outputId": "f6a9859e-ca01-4751-ad77-774997d075df"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1291,7 +1291,7 @@
         "id": "5CiNpSCTPvSk",
         "outputId": "649410b8-8e8d-4983-9fd1-2eb358cfa8c1"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1338,7 +1338,7 @@
       "metadata": {
         "id": "iVGy4c4QQlFb"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1359,7 +1359,7 @@
         "id": "Xw8WrXq9WpOh",
         "outputId": "1552635a-d266-4bb9-8994-e046d3b7dfb3"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1378,7 +1378,7 @@
       "metadata": {
         "id": "IZUt_EVliUdk"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1389,7 +1389,7 @@
       "metadata": {
         "id": "vnWUdqVliJq2"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1402,7 +1402,7 @@
       "metadata": {
         "id": "48CmCTDKXkoY"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1431,7 +1431,7 @@
       "metadata": {
         "id": "nXNPKPbXjCnb"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1453,7 +1453,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1483,7 +1483,7 @@
       "metadata": {
         "id": "7mE0rizv-SEJ"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1565,7 +1565,7 @@
         },
         "outputId": "a0a62507-fc0e-4559-a002-d958496d3f7a"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1636,7 +1636,7 @@
       "metadata": {
         "id": "VmpmoA1LKx3q"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1654,7 +1654,7 @@
         },
         "outputId": "21826be6-c4d4-401b-c39e-15e18888192c"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1723,7 +1723,7 @@
       "metadata": {
         "id": "Zy_f-RHGXn_p"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1747,7 +1747,7 @@
         "id": "W_blxD-TFd6C",
         "outputId": "e4b9fa18-8775-4d61-bbb6-86b3f5abd101"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1804,7 +1804,7 @@
       "metadata": {
         "id": "2fmv4r6ReZcS"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1839,7 +1839,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1880,7 +1880,7 @@
       "metadata": {
         "id": "CLdO2ygPhN_N"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1952,7 +1952,7 @@
       "metadata": {
         "id": "Phn0FtoV3b1k"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1991,7 +1991,7 @@
       "metadata": {
         "id": "loGu908zj0wW"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2013,7 +2013,7 @@
       "metadata": {
         "id": "qGDsb--Roufo"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2071,7 +2071,7 @@
         },
         "outputId": "592c0f36-db4b-466e-ec86-25119eebdd0f"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2140,7 +2140,7 @@
         "id": "DMkvL3IgDCMD",
         "outputId": "b9d9c93e-4519-4cf8-c690-6f143280c172"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2168,7 +2168,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2200,7 +2200,11 @@
         "- We will try the [TinyVGG](https://poloclub.github.io/cnn-explainer/).\n",
         "- The structure:\n",
         "  - Input layer -> [Convolutional layer -> activation layer -> pooling layer] -> output layer\n",
-        "  - We can upscale and repeat: [Convolutional layer -> activation layer -> pooling layer]"
+        "  - We can upscale and repeat: [Convolutional layer -> activation layer -> pooling layer]\n",
+        "- Choosing a model depends on the data and the problem type:\n",
+        "  - Structured (tabular) data: XGBoost, Random Forests\n",
+        "  - Unstructured data: CNNs, Transformers\n",
+        "   "
       ],
       "metadata": {
         "id": "8jtsGG3lwFi1"
