--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNbb5i6cqcmwqwYmkv7pofe"
+      "authorship_tag": "ABX9TyO1hFlrZ/booigc63bVp4Gk"
     },
     "kernelspec": {
       "name": "python3",
@@ -2203,8 +2203,7 @@
         "  - We can upscale and repeat: [Convolutional layer -> activation layer -> pooling layer]\n",
         "- Choosing a model depends on the data and the problem type:\n",
         "  - Structured (tabular) data: XGBoost, Random Forests\n",
-        "  - Unstructured data: CNNs, Transformers\n",
-        "   "
+        "  - Unstructured data: CNNs, Transformers"
       ],
       "metadata": {
         "id": "8jtsGG3lwFi1"
@@ -2212,21 +2211,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class FashionMNISTModelV2(nn.Module):\n",
+        "    \"\"\"\n",
+        "      Model architecture copying TinyVGG from: https://poloclub.github.io/cnn-explainer/\n",
+        "    \"\"\"\n",
+        "\n",
+        "    def __init__(self, input_shape:int, hidden_units:int, output_shape:int):\n",
+        "        super().__init__()\n",
+        "        # block1 contains: two convolution layers and one max pooling layer\n",
+        "        self.block1 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels = input_shape,\n",
+        "                      out_channels = hiddent_units,\n",
+        "                      kernel_size = 3,\n",
+        "                      stride = 1,\n",
+        "                      padding = 1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Conv2d(in_channels = hidden_units,\n",
+        "                      out_channels = hidden_units,\n",
+        "                      stride = 1,\n",
+        "                      kernel_size = 3,\n",
+        "                      padding = 1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(kernel_size = 2,\n",
+        "                         stride = 2)\n",
+        "        )"
+      ],
       "metadata": {
         "id": "WIHvPeJqMo5z"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Do not forget to try GPU for its part"
-      ],
-      "metadata": {
-        "id": "AK6lNa9pFFx7"
-      }
     },
     {
       "cell_type": "markdown",
