--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO1hFlrZ/booigc63bVp4Gk"
+      "authorship_tag": "ABX9TyPX0hyfXXcRp/HnKSZaKVOd"
     },
     "kernelspec": {
       "name": "python3",
@@ -2219,6 +2219,7 @@
         "\n",
         "    def __init__(self, input_shape:int, hidden_units:int, output_shape:int):\n",
         "        super().__init__()\n",
+        "\n",
         "        # block1 contains: two convolution layers and one max pooling layer\n",
         "        self.block1 = nn.Sequential(\n",
         "            nn.Conv2d(in_channels = input_shape,\n",
@@ -2234,8 +2235,19 @@
         "                      padding = 1),\n",
         "            nn.ReLU(),\n",
         "            nn.MaxPool2d(kernel_size = 2,\n",
-        "                         stride = 2)\n",
-        "        )"
+        "                         stride = 2) # default stride takes the same values as kernel_size\n",
+        "        )\n",
+        "\n",
+        "        # block2 is a duplicate of block1\n",
+        "        self.block2 = nn.Sequential(\n",
+        "            nn.Conv2d(hidden_units, hidden_units, kernel_size=3, padding=11),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Conv2d(hidden_units, hidden_units, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(2)\n",
+        "        )\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "WIHvPeJqMo5z"
