--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPX0hyfXXcRp/HnKSZaKVOd"
+      "authorship_tag": "ABX9TyOt4qu1OgG1sW8SchSjK7go"
     },
     "kernelspec": {
       "name": "python3",
@@ -2247,10 +2247,34 @@
         "            nn.MaxPool2d(2)\n",
         "        )\n",
         "\n",
-        ""
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Flatten(),\n",
+        "            nn.Linear(in_features = hidden_units*7*7,\n",
+        "                      out_features = output_shape)\n",
+        "        )\n",
+        "\n",
+        "        def forward(self, x:torch.Tensor):\n",
+        "            x = self.block1(x)\n",
+        "            x = self.block2(x)\n",
+        "            return self.classifier(x)"
       ],
       "metadata": {
         "id": "WIHvPeJqMo5z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "model_2 = FashionMNISTModelV2(input_shape = 1,\n",
+        "                              hidden_units = 10,\n",
+        "                              output_shape = len(class_names).to(device))\n",
+        "model_2"
+      ],
+      "metadata": {
+        "id": "jqwCqB92MJQR"
       },
       "execution_count": null,
       "outputs": []
